[gd_scene load_steps=11 format=2]

[ext_resource path="res://special_scenes/title_screen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://logo.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=3]

[sub_resource type="InputEventAction" id=1]

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("logo_ssf_olympic:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("logo_ssf_olympic:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 0.615572, 1 ),
"update": 0,
"values": [ Vector2( 640, 295 ), Vector2( 640, 295 ), Vector2( 640, 210 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "animation"
tracks/4/path = NodePath("Description2/AnimationPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": PoolStringArray( "blink" ),
"times": PoolRealArray( 1 )
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 0.63728, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "option_selected"

[sub_resource type="DynamicFont" id=6]
size = 24
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = 34.0
margin_right = 145.0
margin_bottom = 326.0
mouse_default_cursor_shape = 3
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="StartHuman" type="Button" parent="Buttons"]
margin_top = 74.0
margin_right = 290.0
margin_bottom = 144.0
rect_min_size = Vector2( 210, 70 )
disabled = true
text = "Fight"

[node name="StartCPU" type="Button" parent="Buttons"]
visible = false
margin_right = 290.0
margin_bottom = 70.0
rect_min_size = Vector2( 210, 70 )
disabled = true
shortcut = SubResource( 2 )
text = "Human vs CPU"

[node name="Options" type="Button" parent="Buttons"]
visible = false
margin_top = 111.0
margin_right = 290.0
margin_bottom = 181.0
rect_min_size = Vector2( 210, 70 )
disabled = true
text = "Options"

[node name="Help" type="Button" parent="Buttons"]
visible = false
margin_top = 148.0
margin_right = 290.0
margin_bottom = 218.0
rect_min_size = Vector2( 210, 70 )
disabled = true
text = "Help"

[node name="Credits" type="Button" parent="Buttons"]
visible = false
margin_top = 148.0
margin_right = 290.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 70 )
disabled = true
text = "Credits"

[node name="QuitButton" type="Button" parent="Buttons"]
margin_top = 148.0
margin_right = 290.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 70 )
disabled = true
text = "Quit"

[node name="Animator" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )
anims/option_selected = SubResource( 5 )

[node name="logo_ssf_olympic" type="Sprite" parent="."]
position = Vector2( 640, 210 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Description2" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 164.5
margin_bottom = 195.5
custom_fonts/font = SubResource( 6 )
text = "press any key to continue"
align = 1
valign = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Description2"]
anims/blink = SubResource( 7 )
[connection signal="pressed" from="Buttons/StartHuman" to="." method="_on_StartHuman_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
